# coding-question

./: README.md  pyproject.toml
.github/skills/: create-coding-question.md  hint-guidelines.md  question-metadata.md
.github/workflows/: ci.yml
answer/: question1.py  question2.py  question3.py  question4.py  question5.py  question6.py
anwer/: question1.py
question/: question1.md  question2.md  question3.md  question4.md  question5.md  question6.md
tests/: test_question1.py  test_question2.py  test_question3.py  test_question4.py  test_question5.py  test_question6.py
